removing my specific code in test html

--- a/test.html
+++ b/test.html
@@ -9,4 +9,4 @@ For more info see http://webgl2fundamentals.org/webgl/lessons/webgl-less-code-mo
 <script src="https://webgl2fundamentals.org/webgl/resources/m4.js"></script>
 <script src="https://webgl2fundamentals.org/webgl/resources/flattened-primitives.js"></script>
 <script src="./test-html.js"></script>
-<script src="./dist/renderer/renderer-engine.js"></script>
+<!-- <script src="./dist/renderer/renderer-engine.js"></script> -->
